@@ -2,6 +2,16 @@
 *** libkvutils - changes and additions to the public interfaces     ***
 -----------------------------------------------------------------------
 
+2000-11-18  Kai Vehmanen <kaiv@wakkanet.fi>	
+
+	* procedure_timer.h (all): added
+	
+2000-11-16  Kai Vehmanen <kaiv@wakkanet.fi>	
+
+	* locks.h (read): renamed to 'get'
+	* locks.h (write): renamed to 'set'
+	* locks.h (add, subtract, increment, decrement): added
+	
 2000-10-17  Kai Vehmanen <kaiv@wakkanet.fi>	
 
 	* object_queue.h (all): few member functions renamed, pthread
@@ -11,7 +21,7 @@
 	
 2000-09-30  Kai Vehmanen <kaiv@wakkanet.fi>	
 
-	* definition_by_contract.h (all): lots of changed in the public
+	* definition_by_contract.h (all): lots of changes in the public
 	interface
 	* library version changed to 2:0:0
 	
